<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.geriadam.viewandviewgroup.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/pixel_google"
                android:scaleType="fitXY"
                android:contentDescription="@string/todo" />
            <TextView
                style="@style/TextContent.small.white"
                android:text="@string/_6_photos"
                android:padding="8dp"
                android:gravity="center_vertical"
                android:drawableLeft="@drawable/ic_collections_black_18dp"
                android:drawablePadding="4dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:background="#4D000000"
                android:textColor="#fff"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_gravity="bottom"
                android:drawableStart="@drawable/ic_collections_black_18dp" />
        </FrameLayout>
        <TextView
            style="@style/TextContent.black"
            android:textSize="32sp"
            android:text="@string/_734"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"/>
        <TextView
            style="@style/TextContent.subTitle"
            android:text="@string/stok_hanya_5_buah"
            android:textSize="12sp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
        <TextView
            style="@style/TextContent"
            android:text="@string/content_text"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:lineSpacingMultiplier="1"
            android:textColor="@android:color/black"/>
        <TextView
            style="@style/TextContent.subTitle"
            android:text="@string/spesifikasi"
            android:textSize="12sp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"/>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    style="@style/TextSpec.Field"
                    android:text="Display"/>
                <TextView
                    style="@style/TextSpec.Value"
                    android:text="@string/content_specs_display"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    style="@style/TextSpec.Field"
                    android:text="Size"/>
                <TextView
                    style="@style/TextSpec.Value"
                    android:text="@string/content_specs_size"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/batteray"/>
                <TextView
                    style="@style/TextSpec.Value"
                    android:text="@string/content_specs_battery"/>
            </TableRow>
        </TableLayout>
        <TextView
            style="@style/TextContent.subTitle"
            android:layout_marginBottom="8dp"
            android:text="@string/di_jual_oleh"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/photo_2"
                android:id="@+id/profile_image"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/activity_vertical_margin"/>
            <TextView
                style="@style/TextContent"
                android:layout_toRightOf="@id/profile_image"
                android:text="Geri adam"
                android:textColor="@android:color/black"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
        <Button
            style="@style/ButtonGeneral"
            android:text="Beli"/>
    </LinearLayout>

</ScrollView>